* Unreleased - Christophe Dumez <chris@qbittorrent.org> - v2.9.3
    - BUGFIX: Fix btdigg plugin (Python3 support + torrent name in magnet links)
    - BUGFIX: Fix banning of IPv6 peers (Closes #885021)
    - BUGFIX: Fix torrent addition dialog layout problem (Closes #84650522)
    - I18N: Add Georgian translation

* Sat Oct 29 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.2
    - BUGFIX: Fix mimimum dimensions for torrent addition dialog
    - BUGFIX: Remove dependency on boost-datetime
    - BUGFIX: Remove dependency on boost-filesystem (libtorrent v0.16.x)

* Sun Oct 23 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.1
    - BUGFIX: Add support for speed limits scheduling (Web UI)
    - BUGFIX: Fix ratio calculation for purely seeded torrents
    - I18N: Update Russian translation
    - COSMETIC: Torrent addition dialog layout fixes

* Sat Oct 08 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.0
    - FEATURE: Add file association settings to program preferences (Windows)
    - FEATURE: Add setting to ignore slow torrents in queueing system
    - FEATURE: Add advanced setting to announce to all trackers
    - FEATURE: Add support for anonymous mode (libtorrent >= v0.16)
    - FEATURE: Add quick "set as default save path" checkbox to torrent addition dialog (sledgehammer999)
    - BUGFIX: Add tray menu entry for toggling window visibility
    - BUGFIX: Fix execution log lines selection and copying
    - BUGFIX: Reduce CPU usage when running Web UI
    - BUGFIX: Save RSS items to disk regularly for safety
    - BUGFIX: Fix ratio calculation (use all_time_download)
    - BUGFIX: Fix torrent upload issues (Web UI)
    - BUGFIX: Fix some IE incompatibilities (Web UI)
    - COSMETIC: Display speed at the beginning of the Window title
    - COSMETIC: Several cosmetic fixes to the Web UI
    - COSMETIC: Make top toolbar follow system style
    - OTHER: Display libraries versions in about dialog (sledgehammer999)