@@ -2,6 +2,7 @@
     - BUGFIX: Fix btdigg plugin (Python3 support + torrent name in magnet links)
     - BUGFIX: Fix banning of IPv6 peers (Closes #885021)
     - BUGFIX: Fix torrent addition dialog layout problem (Closes #84650522)
+    - BUGFIX: Do not report any progress for disabled files (Closes #56731485)
     - I18N: Add Georgian translation
 
 * Sat Oct 29 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.2
